--- a/templates/partials/top_therapists_section.html
+++ b/templates/partials/top_therapists_section.html
@@ -1,7 +1,7 @@
 {% load location_extras %}
 {% load therapist_extras %}
 
-<section x-data="{ showModal: false, therapist: {} }" class="py-10 w-full" style="background-color: #FAF9F9;">
+<section x-data="{ showProfileModal: false, therapist: {} }" class="py-10 w-full" style="background-color: #FAF9F9;">
   <div class="max-w-7xl mx-auto px-4">
     <h2 class="text-2xl sm:text-3xl font-bold mb-8 text-center" style="color: #555B6E;">Top Therapists in Your Area</h2>
     <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-8 justify-items-center">
