--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,9 @@
 {% load static %}
 {% block content %}
 <script src="{% static 'home.js' %}"></script>
-<!-- Modals: search and profile -->
-<div x-data="{ showModal: false, showProfileModal: false, therapist: {} }">
+<div x-data="{ showProfileModal: false, therapist: {} }">
   {% include "partials/profile_modal.html" %}
 </div>
-{% include "partials/search_modal.html" %}
 <div class="flex-1 flex flex-col" style="background-color: #FAF9F9;">
     {% include "partials/hero_section.html" %}
     {% include "partials/carousel_section.html" %}
