--- a/templates/partials/top_therapists_section.html
+++ b/templates/partials/top_therapists_section.html
@@ -55,20 +55,26 @@
             type="button"
             class="get-started-btn font-semibold rounded px-4 py-2 cursor-pointer bg-[#89B0AE] text-white hover:bg-[#555B6E]"
             style="margin-top: 1rem;"
-            @click="$dispatch('open-modal', {
-              profile_photo_url: '{{ therapist.profile_photo.url|default:'https://randomuser.me/api/portraits/lego/1.jpg'|escapejs }}',
-              name: '{{ therapist.first_name|escapejs }} {{ therapist.last_name|escapejs }}',
-              license_type: '{{ therapist.license_type.name|default:''|escapejs }}',
-              license_type_description: '{{ therapist.license_type.description|default:''|escapejs }}',
-              credentials: '{{ therapist.credentials_note|default:''|escapejs }}',
-              tagline: '{{ therapist.tagline|default:''|escapejs }}',
-              bio: '{{ therapist.short_bio|default:''|escapejs }}',
-              specialties: '{% for tag in therapist.practice_areas_tags.all %}{{ tag.name|escapejs }}{% if not forloop.last %}, {% endif %}{% endfor %}',
-              personal_statement_q1: '{{ therapist.personal_statement_q1|default:''|escapejs }}',
-              personal_statement_q2: '{{ therapist.personal_statement_q2|default:''|escapejs }}',
-              personal_statement_q3: '{{ therapist.personal_statement_q3|default:''|escapejs }}',
-              gallery_images: [{% for img in therapist.gallery_images.all %}'{{ img.image.url|escapejs }}'{% if not forloop.last %}, {% endif %}{% endfor %}]
-            })"
+            @click="
+              fetch('/users/api/profile_click/', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ user_id: {{ therapist.user.id }} })
+              });
+              $dispatch('open-modal', {
+                profile_photo_url: '{{ therapist.profile_photo.url|default:'https://randomuser.me/api/portraits/lego/1.jpg'|escapejs }}',
+                name: '{{ therapist.first_name|escapejs }} {{ therapist.last_name|escapejs }}',
+                license_type: '{{ therapist.license_type.name|default:''|escapejs }}',
+                license_type_description: '{{ therapist.license_type.description|default:''|escapejs }}',
+                credentials: '{{ therapist.credentials_note|default:''|escapejs }}',
+                tagline: '{{ therapist.tagline|default:''|escapejs }}',
+                bio: '{{ therapist.short_bio|default:''|escapejs }}',
+                specialties: '{% for tag in therapist.practice_areas_tags.all %}{{ tag.name|escapejs }}{% if not forloop.last %}, {% endif %}{% endfor %}',
+                personal_statement_q1: '{{ therapist.personal_statement_q1|default:''|escapejs }}',
+                personal_statement_q2: '{{ therapist.personal_statement_q2|default:''|escapejs }}',
+                personal_statement_q3: '{{ therapist.personal_statement_q3|default:''|escapejs }}',
+                gallery_images: [{% for img in therapist.gallery_images.all %}'{{ img.image.url|escapejs }}'{% if not forloop.last %}, {% endif %}{% endfor %}]
+              })"
           >View Profile</button>
         </div>
       </div>
